--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Show</title>
 </head>
 <body>
-    <h1>Home Yelp Camp</h1>
-    <a href="/api/campgrounds">Ir a campgrounds</a>
+    <h1> Campgroun Show</h1>
+    
+    
 </body>
 </html>
