--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -7,8 +7,9 @@
     <title>Show</title>
 </head>
 <body>
-    <h1> Campgroun Show</h1>
-    
+    <h1> Campground <%= camp.title %> </h1>
+    <h2> <%= camp.location %> </h2>
+
     
 </body>
 </html>
