--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>All Campgrounds</h1>
+    <a href="/api/campgrounds/new">Add a CampGround</a>
     <ul>
         <% for(let campground of campgrounds){ %> 
             <li> <a href="/api/campgrounds/<%=campground._id%>"><%= campground.title %></a> </li>
