--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,6 +9,11 @@
 <body>
     <h1> Campground <%= camp.title %> </h1>
     <h2> <%= camp.location %> </h2>
+    <footer>
+        <a href="/api/campgrounds">All Campgrounds</a>
+        <a href="/api/campgrounds/<%= camp._id %>/edit ">Edit</a>
+    </footer>
+
 
     
 </body>
