--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,27 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDIT</title>
-</head>
-<body>
-    <h1>Edit campground</h1>
-    <form action="/api/campgrounds/<%=camp._id %>?_method=PUT" method="post">
-        <div>
-            <label for="title"> Title </label>
-            <input type="text" name="campground[title]" id="title" value="<%= camp.title %> ">
-        </div>
-        <div>
-            <label for="location"> Location </label>
-            <input type="text" name="campground[location]" id="location" value="<%= camp.location %> ">
-        </div>
-        <button>Edit Campground</button>
+<% layout('layouts/boilerplate') %> 
 
 
-    </form>
-    <a href="/api/campgrounds/<%= camp._id %>">Back to the campground</a>
-    
-</body>
-</html>
+<h1>Edit campground</h1>
+<form action="/api/campgrounds/<%=camp._id %>?_method=PUT" method="post">
+  <div>
+    <label for="title"> Title </label>
+    <input
+      type="text"
+      name="campground[title]"
+      id="title"
+      value="<%= camp.title %> "
+    />
+  </div>
+  <div>
+    <label for="location"> Location </label>
+    <input
+      type="text"
+      name="campground[location]"
+      id="location"
+      value="<%= camp.location %> "
+    />
+  </div>
+  <button>Edit Campground</button>
+</form>
+<a href="/api/campgrounds/<%= camp._id %>">Back to the campground</a>
