--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New</title>
-</head>
-<body>
-    <form action="/api/campgrounds" method="post">
-        <div>
-            <label for="title"> Title </label>
-            <input type="text" name="campground[title]" id="title">
-        </div>
-        <div>
-            <label for="location"> Location </label>
-            <input type="text" name="campground[location]" id="location">
-        </div>
-        <button>Add Campground</button>
+<% layout('layouts/boilerplate') %> 
+
+<form action="/api/campgrounds" method="post">
+    <div>
+        <label for="title"> Title </label>
+        <input type="text" name="campground[title]" id="title">
+    </div>
+    <div>
+        <label for="location"> Location </label>
+        <input type="text" name="campground[location]" id="location">
+    </div>
+    <button>Add Campground</button>
 
 
-    </form>
-    <a href="/api/campgrounds">All Campgrounds</a>
+</form>
+<a href="/api/campgrounds">All Campgrounds</a>
     
-</body>
-</html>
