--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-<body>
-    <h1> Campground <%= camp.title %> </h1>
-    <h2> <%= camp.location %> </h2>
-    <footer>
-        <a href="/api/campgrounds">All Campgrounds</a>
-        <a href="/api/campgrounds/<%= camp._id %>/edit ">Edit</a>
-        <form action="/api/campgrounds/<%= camp._id %>?_method=DELETE" method="post">
-            <button>DELETE CAMPGROUND</button>
-        </form>
-    </footer>
+<% layout('layouts/boilerplate') %> 
 
+<h1> Campground <%= camp.title %> </h1>
+<h2> <%= camp.location %> </h2>
+<footer>
+    <a href="/api/campgrounds">All Campgrounds</a>
+    <a href="/api/campgrounds/<%= camp._id %>/edit ">Edit</a>
+    <form action="/api/campgrounds/<%= camp._id %>?_method=DELETE" method="post">
+        <button>DELETE CAMPGROUND</button>
+    </form>
+</footer>
 
-    
-</body>
-</html>
