--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,6 +3,7 @@
 <h1> Campground <%= camp.title %> </h1>
 <h2> <%= camp.location %> </h2>
 <img src="<%= camp.image %> " alt="">
+<h3>Price: <%= camp.price %> </h3>
 <p><%= camp.description %> </p>
 <footer>
     <a href="/api/campgrounds">All Campgrounds</a>
