--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,17 +1,46 @@
 <% layout('layouts/boilerplate') %> 
 
-<form action="/api/campgrounds" method="post">
-    <div>
-        <label for="title"> Title </label>
-        <input type="text" name="campground[title]" id="title">
-    </div>
-    <div>
-        <label for="location"> Location </label>
-        <input type="text" name="campground[location]" id="location">
-    </div>
-    <button>Add Campground</button>
+<div class="row">
+    <h1 class="text-center">New Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/api/campgrounds" method="post">
+            <div class="mb-3">
+                <label class="form-label" for="title"> Title </label>
+                <input type="text" name="campground[title]" id="title" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="location" class="form-label"> Location </label>
+                <input type="text" name="campground[location]" id="location" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label"> Price </label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="number" class="form-control" placeholder="0.00" aria-label="price-label" aria-describedby="price-label" id="price"
+                </div>
+
+            </div>
 
 
-</form>
-<a href="/api/campgrounds">All Campgrounds</a>
+
+            <div class="mb-3">
+                <label for="image" class="form-label"> Image URL </label>
+                <input type="text" name="campground[image]" id="image" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label"> Description </label>
+                <textarea  name="campground[description]" id="image" class="form-control"></textarea>
+            </div>
+
+
+
+            <div class="mb-3">
+                <button class="btn btn-success">Add Campground</button>
+            </div>
+        </form>
+        <a href="/api/campgrounds">All Campgrounds</a>
+    </div>
+</div>
+
+
     
