--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,26 +1,47 @@
 <% layout('layouts/boilerplate') %> 
 
 
-<h1>Edit campground</h1>
-<form action="/api/campgrounds/<%=camp._id %>?_method=PUT" method="post">
-  <div>
-    <label for="title"> Title </label>
-    <input
-      type="text"
-      name="campground[title]"
-      id="title"
-      value="<%= camp.title %> "
-    />
-  </div>
-  <div>
-    <label for="location"> Location </label>
-    <input
-      type="text"
-      name="campground[location]"
-      id="location"
-      value="<%= camp.location %> "
-    />
-  </div>
-  <button>Edit Campground</button>
-</form>
-<a href="/api/campgrounds/<%= camp._id %>">Back to the campground</a>
+
+<h1 class="text-center">Edit Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/api/campgrounds/<%=camp._id %>?_method=PUT" method="post">
+            <div class="mb-3">
+                <label class="form-label" for="title"> Title </label>
+                <input type="text" name="campground[title]" id="title" class="form-control" value="<%= camp.title %> ">
+            </div>
+            <div class="mb-3">
+                <label for="location" class="form-label"> Location </label>
+                <input type="text" name="campground[location]" id="location" class="form-control" value="<%= camp.location %> ">
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label"> Price </label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="number" name="campground[price]" class="form-control" placeholder="0.00" aria-label="price-label" aria-describedby="price-label" id="price" value="<%= camp.price %>">
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label"> Image URL </label>
+                <input type="text" name="campground[image]" id="image" class="form-control" value="<%= camp.image %> ">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label"> Description </label>
+                <textarea  name="campground[description]" id="image" class="form-control"> <%= camp.description %> </textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Edit Campground</button>
+            </div>
+        </form>
+        <a href="/api/campgrounds/<%= camp._id %>">Back to the campground</a>
+        <a href="/api/campgrounds">All Campgrounds</a>
+    </div>
+
+
+
+
+
+
+
+
+
+
