--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,7 +10,7 @@
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item"> Location:<%= camp.location %></li>
-              <li class="list-group-item">Price: $<%= camp.price %>nigth</li>
+              <li class="list-group-item">Price: $<%= camp.price %>/nigth</li>
             </ul>
             <div class="card-body">
               <a href="/api/campgrounds/<%= camp._id %>/edit " class="card-link btn btn-info">Edit</a>
