--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,5 +22,17 @@
                 <a href="/api/campgrounds">All Campgrounds</a>
             </div>
           </div>
+          <h3>Leave a review</h3>
+          <form action="">
+            <div class="mb-3">
+              <label for="rating" class="form-label">Rate</label>
+              <input type="range" min="1" max="5" class="form-range" id="rating" name="review[rating]">
+            </div>
+            <div class="mb-3">
+              <label for="body" class="form-label">Review</label>
+              <textarea name="review[body]" id="body" cols="30" rows="4" class="form-control"></textarea>
+            </div>
+            <button class="btn btn-success">Send</button>
+          </form>
     </div>
 </div>
