--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -23,7 +23,7 @@
             </div>
           </div>
           <h3>Leave a review</h3>
-          <form action="">
+          <form action="/api/campgrounds/<%= camp._id %>/reviews" method="post">
             <div class="mb-3">
               <label for="rating" class="form-label">Rate</label>
               <input type="range" min="1" max="5" class="form-range" id="rating" name="review[rating]">
