--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -23,14 +23,14 @@
             </div>
           </div>
           <h3>Leave a review</h3>
-          <form action="/api/campgrounds/<%= camp._id %>/reviews" method="post">
+          <form action="/api/campgrounds/<%= camp._id %>/reviews" method="post" novalidate class="validated-form">
             <div class="mb-3">
               <label for="rating" class="form-label">Rate</label>
               <input type="range" min="1" max="5" class="form-range" id="rating" name="review[rating]">
             </div>
             <div class="mb-3">
               <label for="body" class="form-label">Review</label>
-              <textarea name="review[body]" id="body" cols="30" rows="4" class="form-control"></textarea>
+              <textarea name="review[body]" id="body" cols="30" rows="4" class="form-control" required></textarea>
             </div>
             <button class="btn btn-success">Send</button>
           </form>
