--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -34,5 +34,11 @@
             </div>
             <button class="btn btn-success">Send</button>
           </form>
+          <% for(let review of camp.reviews){ %>
+            <div class="mb-3">
+              <p> Rating: <%= review.rating %> </p>
+              <p> Review: <%= review.body %> </p>
+            </div>
+          <% } %>  
     </div>
 </div>
