--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -41,8 +41,16 @@
           <% for(let review of camp.reviews){ %>
             <div class="card mb-3">
               <div class="card-body">
-                <h5 class="card-title">Rating: <%= review.rating %></h5>
+                
+                <h5 class="card-title ">
+                  <form action="/api/campgrounds/<%= camp._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="d-inline">
+                    <button class="material-symbols-outlined btn btn-danger btn-sm">delete</button>
+                  </form>
+                    Rating: <%= review.rating %> 
+                </h5>
+                
                 <p class="card-text"> Review: <%= review.body %> </p>
+                
               </div>
             </div>
           <% } %>  
