--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,17 +5,16 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active"  href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/api/campgrounds">All Campgrounds</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/api/campgrounds/new">New Campground</a>
-          </li>
-        </ul>
+        <div class="navbar-nav">
+          <a class="nav-link active"  href="/">Home</a>       
+          <a class="nav-link" href="/api/campgrounds">All Campgrounds</a>       
+          <a class="nav-link" href="/api/campgrounds/new">New Campground</a>
+        </div>
+      </div>      
+      <div class="navbar-nav">
+        <a href="/api/users/login" class="nav-link">Log In</a>
+        <a href="/api/users/register" class="nav-link">Register</a>
+        <a href="/api/users/logout" class="nav-link">Log Out</a>
       </div>
     </div>
 </nav>
