--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -30,7 +30,7 @@
         />
         <div class="valid-feedback">Looks Good!</div>
       </div>
-      <button class="btn btn-success">Register</button>
+      <button class="btn btn-success">Log in</button>
     </form>
   </div>
 </div>
