--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,12 +13,14 @@
               <li class="list-group-item">Submited By: <b><%= camp.author.username %> </b></li>
               <li class="list-group-item">Price: $<%= camp.price %>/nigth</li>
             </ul>
+            <% if(usuario && camp.author.equals(usuario._id)){ %> 
             <div class="card-body">
               <a href="/api/campgrounds/<%= camp._id %>/edit " class="card-link btn btn-info">Edit</a>
               <form class="d-inline" action="/api/campgrounds/<%= camp._id %>?_method=DELETE" method="post">
                 <button class="btn btn-danger">DELETE CAMPGROUND</button>
             </form>
             </div>
+            <% } %> 
             <div class="card-footer text-muted">
                 <a href="/api/campgrounds">All Campgrounds</a>
             </div>
