--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/api/campgrounds" method="post" class ='validated-form'   novalidate>
+        <form action="/api/campgrounds" method="post" class ='validated-form'   novalidate enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title"> Title </label>
                 <input type="text" name="campground[title]" id="title" class="form-control" required>
@@ -29,9 +29,12 @@
                     </div>
                 </div>
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label for="image" class="form-label"> Image URL </label>
                 <input type="text" name="campground[image]" id="image" class="form-control" required>
+            </div> -->
+            <div class="mb-3">
+                <input type="file" name="image" id="image" class="form-control" required>
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"> Description </label>
