--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,9 @@
 <div class="row mb-4">
     <div class="col-6 ">
         <div class="card">
-            <img src="<%= camp.image %> " class="card-img-top ">
+            <% for(let image of camp.images){ %> 
+              <img src="<%= image.url %> " class="card-img-top ">
+            <% } %> 
             <div class="card-body">
               <h5 class="card-title">Campground <%= camp.title %> </h5>
               <p class="card-text"><%= camp.description %></p>
