--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,10 +2,27 @@
 <link rel="stylesheet" href="/styles/stars.css">
 <div class="row mb-4">
     <div class="col-6 ">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <% camp.images.forEach((img, i)=>{ %>
+            <div class="carousel-item <%= i == 0 ? 'active' : '' %> ">
+              <img src="<%= img.url %>" class="d-block w-100" alt="">
+            </div>
+          <% }) %>  
+          
+        </div>
+        <% if(camp.images.length > 1){ %> 
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+        <% } %> 
+      </div>
         <div class="card">
-            <% for(let image of camp.images){ %> 
-              <img src="<%= image.url %> " class="card-img-top ">
-            <% } %> 
             <div class="card-body">
               <h5 class="card-title">Campground <%= camp.title %> </h5>
               <p class="card-text"><%= camp.description %></p>
