--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,7 +4,7 @@
 
 <h1 class="text-center">Edit Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/api/campgrounds/<%=camp._id %>?_method=PUT" method="post" class ='validated-form'   novalidate>
+        <form action="/api/campgrounds/<%=camp._id %>?_method=PUT" method="post" class ='validated-form' novalidate enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title"> Title </label>
                 <input type="text" name="campground[title]" id="title"  required class="form-control" value="<%= camp.title %> ">
@@ -30,8 +30,8 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label for="image" class="form-label"> Image URL </label>
-                <input type="text" name="campground[image]" id="image"  required class="form-control" value="<%= camp.image %> ">
+                <label for="image" class="form-label"> Image:</label>
+                <input type="file" name="image" id="image"  required class="form-control"  multiple>
                 <div class="valid-feedback">
                     Looks Good!
                 </div>
