--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -29,15 +29,12 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="mb-3">
-                <label for="image" class="form-label"> Image URL </label>
-                <input type="text" name="campground[image]" id="image" class="form-control" required>
-            </div> -->
             <div class="mb-3">
-                <input type="file" name="image" id="image" class="form-control" required multiple >
+                <label for="image" class="form-label">Upload Images</label>
+                <input class="form-control" type="file" id="image" name="image" multiple required>
             </div>
-            <div class="mb-3">
-                <label for="description" class="form-label"> Description </label>
+            <div class="mb-3 ">
+                <label for="description" class="form-label "> Description </label>
                 <textarea  name="campground[description]" id="image" class="form-control" required></textarea>
                 <div class="valid-feedback">
                     Looks Good!
