Geocoding, getting coordenates

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -31,7 +31,7 @@
             </div>
             <div class="mb-3">
                 <label for="image" class="form-label">Upload Images</label>
-                <input class="form-control" type="file" id="image" name="image" multiple required>
+                <input class="form-control" type="file" id="image" name="image" multiple >
             </div>
             <div class="mb-3 ">
                 <label for="description" class="form-label "> Description </label>
