--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,11 @@
 <% layout('layouts/boilerplate') %> 
 <link rel="stylesheet" href="/styles/stars.css">
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+</script>
 <div class="row mb-4">
     <div class="col-6 ">
+      <div id='map' style='width: 400px; height: 300px;'></div>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <% camp.images.forEach((img, i)=>{ %>
@@ -96,3 +100,4 @@
           <% } %>   
     </div>
 </div>
+<script src="/showPageMap.js"></script>
