--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,6 @@
 <% layout('layouts/boilerplate') %> 
 <link rel="stylesheet" href="/styles/stars.css">
-<script>
-    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-</script>
+
 <div class="row mb-4">
     <div class="col-6 ">
       <div id='map' style='width: 400px; height: 300px;'></div>
@@ -100,4 +98,10 @@
           <% } %>   
     </div>
 </div>
+
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  const campground = <%- JSON.stringify(camp) %>
+</script>
+
 <script src="/showPageMap.js"></script>
