--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,6 +2,8 @@
 <% layout('layouts/boilerplate') %> 
 
 
+<div id="map" style="width: 100%; height: 400px;"></div>
+
 <h1>All Campgrounds</h1>
 <a href="/api/campgrounds/new">Add a CampGround</a>
 
@@ -30,3 +32,8 @@
     </div>
   </div>
 <% } %>
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+</script>
+
+<script src="/clusterMap.js"></script>
