--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -34,6 +34,7 @@
 <% } %>
 <script>
   const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  const campgrounds = {features: <%- JSON.stringify(campgrounds)%>}
 </script>
 
 <script src="/clusterMap.js"></script>
