--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,46 @@
-<% layout('layouts/boilerplate') %> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yelp Camp</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="/styles/home.css">
+</head>
+<body class="d-flex text-center text-white bg-dark">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="mb-auto">
+             <div>
+                <h3 class="float-md-start  mb-0">Yelp Camp</h3>
+                <nav class="nav nav-masthead justify-content-center float-md-end">
+                    <a class="nav-link active " aria-current="page" href="/">Home</a>
+                    <a class="nav-link" href="/api/campgrounds">Campgrounds</a>
+                    <% if(!usuario){ %>
+                        <a class="nav-link" href="/api/users/login">Login</a>
+                        <a class="nav-link" href="/api/users/register">Register</a>
+                    <% }else{%>  
+                        <a class="nav-link" href="/api/users/logout">Log Out</a>
+                    <% } %> 
+                </nav>
+             </div>
+        </header>
+        <main class="px-3">
+            <h1>Yelp Camp</h1>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, incidunt in minus ea asperiores voluptate perferendis quis labore unde officia optio aliquam deserunt vero totam fugiat pariatur vel at reprehenderit?</p>
+            <a href="/api/campgrounds" class="btn btn-lg btn-secondary  bg-white">View Campgrounds</a>
+        </main>
+        <footer class="mt-auto text-white-50">
+            <p>&copy 2022 YelpCamp - Andres Felipe Perez</p>
 
-<h1>Home Yelp Camp</h1>
-<a href="/api/campgrounds">Ir a campgrounds</a>
+        </footer>
+
+    </div>
+
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+</body>
+</html>
