--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,27 +1,31 @@
 <% layout('layouts/boilerplate') %> 
 
-<h1>Register</h1>
-<form action="/api/users/register" method="post" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username"> Username </label>
-        <input type="text" name="user[username]" id="username" class="form-control" required>
-        <div class="valid-feedback">
-            Looks Good!
-        </div>
+<div class="row">
+    <div class="col-6 offset-3">
+        <h2>Register</h2>
+        <form action="/api/users/register" method="post" class="validated-form" novalidate>
+            <div class="mb-3">
+                <label class="form-label" for="username"> Username </label>
+                <input type="text" name="user[username]" id="username" class="form-control" required>
+                <div class="valid-feedback">
+                    Looks Good!
+                </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="email"> Email </label>
+                <input type="email" name="user[email]" id="email" class="form-control" required>
+                <div class="valid-feedback">
+                    Looks Good!
+                </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="password"> Password </label>
+                <input type="password" name="user[password]" id="password" class="form-control" required>
+                <div class="valid-feedback">
+                    Looks Good!
+                </div>
+            </div>
+            <button class="btn btn-success">Register</button>
+        </form>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="email"> Email </label>
-        <input type="email" name="user[email]" id="email" class="form-control" required>
-        <div class="valid-feedback">
-            Looks Good!
-        </div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="password"> Password </label>
-        <input type="password" name="user[password]" id="password" class="form-control" required>
-        <div class="valid-feedback">
-            Looks Good!
-        </div>
-    </div>
-    <button class="btn btn-success">Register</button>
-</form>
+</div>
