--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,14 +2,14 @@
 <% layout('layouts/boilerplate') %> 
 
 
-<div id="map" style="width: 100%; height: 400px;"></div>
+<div id="cluster-map" ></div>
 
 <h1>All Campgrounds</h1>
 <a href="/api/campgrounds/new">Add a CampGround</a>
 
 
 <% for(let campground of campgrounds){ %>
-  <div class="card">
+  <div class="card mb-2">
     <div class="row">
       <div class="col-md-4">
         <% if(campground.images.length){ %>
