Solving Mongo Injection

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,9 +27,17 @@
              </div>
         </header>
         <main class="px-3">
-            <h1>Yelp Camp</h1>
-            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, incidunt in minus ea asperiores voluptate perferendis quis labore unde officia optio aliquam deserunt vero totam fugiat pariatur vel at reprehenderit?</p>
+            <h1>Yelp Camp - About</h1>
+            <p class="lead">This website is a project which consists of applying the knowledge I acquired about web development, applying skills in technologies such as <b>HTML5, CSS, Bootstrap, JavaScript, Node Js, Express, No SQL Databases </b>specifically MongoDb.
+                Work concepts such as  Cookies ,  Session management (Express-sessions), validation and sanitization of data (Joi JS), authorizations and authentication (PassportJS), consumption of third party APIs (MapBox), management of image storage in the cloud (Multer and cloudinary),
+                version control (Git and Github), connection and interaction to database (Mongoose), Data relationships with MongoDB, Handling Errors in a Web App etc.
+            </p>
             <a href="/api/campgrounds" class="btn btn-lg btn-secondary  bg-white">View Campgrounds</a>
+            <div class="d-flex mt-2 flex-column align-items-start">
+                <p>Link to the Project Repository: <a href="https://github.com/andresfelss/YELP-CAMP/tree/master" target="_blank">Repository</a></p>
+                <p>Link to My Linkedln: <a href="https://www.linkedin.com/in/andres-felipe-perez/" target="_blank">Andres Perez</a></p>
+                
+            </div>
         </main>
         <footer class="mt-auto text-white-50">
             <p>&copy 2022 YelpCamp - Andres Felipe Perez</p>
