--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,9 +2,11 @@
 <% layout('layouts/boilerplate') %> 
 <div class="alert alert-danger" role="alert">
     <h4 class="alert-heading text-center"><%= err.message %>  <%= err.statusCode %> </h4>
+    <% if(procces.env.NODE_ENV !== 'production'){ %> 
     <p>
         <%= err.stack %> 
     </p>
+    <% } %> 
     <hr>
     <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
 </div>
