Adding text in Home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,8 @@
             <p class="lead">This website is a project which consists of applying the knowledge I acquired about web development, applying skills in technologies such as <b>HTML5, CSS, Bootstrap, JavaScript, Node Js, Express, No SQL Databases </b>specifically MongoDb.
                 Work concepts such as  Cookies ,  Session management (Express-sessions), validation and sanitization of data (Joi JS), authorizations and authentication (PassportJS), consumption of third party APIs (MapBox), management of image storage in the cloud (Multer and cloudinary),
                 version control (Git and Github), connection and interaction to database (Mongoose), Data relationships with MongoDB, Handling Errors in a Web App, also learn some basic Stuff of some seccurity issues like SQL injection, cross side scripting (XSS) and how to mitigate this 
-                vulnerabilities with some tools that Express provide like , HTML-sanitizing and helmet
+                vulnerabilities with some tools that Express provide like , HTML-sanitizing and helmet <br>
+                and finally I learned how to deploy the app in HEROKU, Thanks For reading!.
             </p>
             <a href="/api/campgrounds" class="btn btn-lg btn-secondary  bg-white">View Campgrounds</a>
             <div class="d-flex mt-2 flex-column align-items-start">
